--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "regression",
-  "description" : "Javascript least squares data fitting methods",
-  "author" : "Gavin <gavin@whyte.biz>",
-  "version": "1.2.1",
-  "license" : "MIT",
-  "repository": "gavinwhyte/regression-js",
-  "keywords" : [
-        "regression",
-        "data",
-        "fitting",
-        "modelling",
-        "analysis"
-  ],
-  "devDependencies": {
-	  "grunt": "~0.4.1",
-	  "grunt-contrib-uglify": "~0.2.2"
-  }
+  "name": "regressionjs",
+  "description": "Javascript least squares data fitting methods",
+  "author": "Gavin <gavin@whyte.biz>",
+  "version": "1.2.2",
+  "license": "MIT",
+  "repository": "kununguak-iversen/regression-js",
+  "keywords": [
+    "regression",
+    "data",
+    "fitting",
+    "modelling",
+    "analysis"
+  ]
 }
